<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamics_interface</name>
  <version>1.1.0</version>
  <description>Kinematics interface for ROS 2 control</description>
  <maintainer email="thibault.poignonec@outlook.fr">Thibault Poignonec</maintainer>
  <license>Apache License 2.0</license>
  <author email="thibault.poignonec@outlook.fr">Thibault Poignonec</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
